# ink-wrapper

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain  rust-toolchain.toml  rustfmt.toml  test.sh
.github/: pull_request_template.md
.github/actions/publish-if-newer/: action.yml
.github/workflows/: ci.yml  publish.yml
ci/: Dockerfile.aleph-node  Dockerfile.builder  test.sh
ink-wrapper/: Cargo.toml
ink-wrapper-drink/: Cargo.toml
ink-wrapper-drink/src/: calls.rs  drink.rs  lib.rs
ink-wrapper-types/: Cargo.toml
ink-wrapper-types/src/: aleph_client.rs  calls.rs  drink.rs  lib.rs  util.rs
ink-wrapper-types/src/aleph_client/: client.rs  mod.rs
ink-wrapper-types/src/drink/: client.rs  mod.rs
ink-wrapper-types/src/drink_types/: client.rs  mod.rs
ink-wrapper/src/: codegen.rs  extensions.rs  main.rs
psp22_contract/: lib.rs
src/: main.rs
test-project/: Cargo.toml
test-project/psp22_contract/: Cargo.toml
test-project/src/: helpers.rs  lib.rs  main.rs  psp22_tests.rs  test_contract.rs  test_contract_tests.rs  test_drink_integration.rs
test-project/src/aleph_client/: mod.rs
test-project/test_contract/: lib.rs
test_contract/: Cargo.toml  lib.rs
tests/aleph_client/: Cargo.toml
tests/aleph_client/src/: lib.rs  psp22_tests.rs  test_contract_tests.rs
tests/drink/: Cargo.toml
tests/drink/src/: lib.rs  psp22_tests.rs  test_contract_tests.rs
tests/psp22_contract/: Cargo.toml  lib.rs
tests/test_contract/: Cargo.toml  lib.rs
