[package]
name = "ink-wrapper-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
ink_primitives = "4.0.0-beta.1"
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
aleph-client = { path = "../../aleph-client", optional = true }

[features]
aleph-client = ["dep:aleph-client"]
