[package]
name = "ink-wrapper-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
ink_primitives = "4.0.1"
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
aleph_client = { git = "https://github.com/Cardinal-Cryptography/aleph-node.git", rev = "r-10.0", optional = true }
pallet-contracts-primitives = { git = "https://github.com/Cardinal-Cryptography/substrate.git", branch = "aleph-v0.9.38" }
anyhow = { version = "1.0.51", optional = true }
subxt = { version = "0.25.0", optional = true }

[features]
default = ["aleph_client"]
aleph_client = ["dep:aleph_client", "dep:anyhow", "dep:subxt"]
