[package]
name = "ink-wrapper"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
description = "Tool for generating type-safe code for calling an ink smart contract based on the metadata file for that contract."
repository = "https://github.com/Cardinal-Cryptography/ink-wrapper.git"
homepage = "https://github.com/Cardinal-Cryptography/ink-wrapper"
documentation = "https://docs.rs/ink-wrapper"
keywords = ["ink", "wasm", "blockchain", "contract", "client"]
categories = ["development-tools::build-utils"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.1", features = ["derive"] }
anyhow = "1.0"
genco = "0.17"
hex = "0.4.3"
ink_metadata = "4.2.1"
scale-info = "2.3"
# proc-macro2 is a dependency of genco, but >=1.0.56 breaks genco - see https://github.com/udoprog/genco/issues/39
proc-macro2 = "=1.0.55"
