[package]
name = "test-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Dependencies needed for generated contract wrappers

ink-wrapper-types = { path = "../ink-wrapper-types", features = [
    "aleph_client",
    "drink",
] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
ink_primitives = "4.2.1"
async-trait = "0.1.68"

# aleph_client version compatible with the one used in ink-wrapper-types

aleph_client = { version = "3.0.0" }

# Other dependencies

anyhow = "1.0.69"
tokio = { version = "1.25.0", features = ["macros"] }
sp-core = "16.0.0"
rand = "0.8.4"
assert2 = "0.3.10"
once_cell = "1.17.1"
drink = { git = "https://github.com/Cardinal-Cryptography/drink", branch = "obrok/separate-instantiate" }
