[package]
name = "test-project-aleph-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
ink_primitives = "4.2.1"
async-trait = "0.1.68"

ink-wrapper-types = { path = "../../ink-wrapper-types", package = "ink-wrapper-types", default-features = false, features = [
    "aleph_client",
] }
aleph_client = { git = "https://github.com/Cardinal-Cryptography/aleph-node", package = "aleph_client", tag = "r-12.1" }
ink_metadata = { git = "https://github.com/paritytech/ink", package = "ink_metadata", rev = "v4.0.1" }


anyhow = "1.0.69"
tokio = { version = "1.25.0", features = ["macros"] }
sp-core = "16.0.0"
rand = "0.8.4"
assert2 = "0.3.10"
once_cell = "1.17.1"
