[package]
name = "test-project-drink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drink = "0.8.2"

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }

ink-wrapper-types = { path = "../../ink-wrapper-types", default-features = false, features = [
    "drink",
] }
frame-system = "23.0.0"
ink_metadata = "4.3.0"
ink_primitives = "4.2.1"

anyhow = "1.0.69"
sp-core = "16.0.0"
assert2 = "0.3.10"
