[package]
name = "test-project-drink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }

ink-wrapper-types = { path = "../../ink-wrapper-types", default-features = false, features = [
    "drink",
] }
ink_primitives = "4.3.0"
drink = "0.8.6"

anyhow = "1.0.69"
assert2 = "0.3.10"
